--- a/project.json
+++ b/project.json
@@ -4,6 +4,7 @@
   "description": "Prueba Práctica – Desarrollo de\r\nAutomatización RPA",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[3.0.1]",
     "UiPath.System.Activities": "[25.4.2]"
   },
   "webServices": [],
